# entservices-backupmanager

./: CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md
.github/workflows/: native_full_build.yml  tests-trigger.yml
plugin/: BackupManager.conf.in  BackupManager.cpp  BackupManager.h  BackupManagerImplementation.cpp  BackupManagerImplementation.h  CMakeLists.txt  Module.h
